--- a/.github/workflows/golang.yaml
+++ b/.github/workflows/golang.yaml
@@ -30,5 +30,8 @@ jobs:
             dep ensure
         fi
 
+    - name: Tests
+      run: touch .env && go test
+      
     - name: Build
       run: go build -v .
